I haven't commited for a while

--- a/assignment1/.vscode/launch.json
+++ b/assignment1/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - GFG",
+            "request": "launch",
+            "mainClass": "GFG",
+            "projectName": "assignment1"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - BetterQuicksort",
             "request": "launch",
             "mainClass": "BetterQuicksort",
